--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,57 @@
-h1 {
-    color: green;
-}   
+body {
+    background: url("../images/diamond.jpg");
+}
+
+.timer {
+    text-align: center;
+}
+form {
+    text-align: center;
+    background: orange;
+    margin: auto;
+    width: 600px;
+    padding:20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 
 p {
     color: green;
+}
+.startquiz {
     text-align: center;
 }
 
+.question1 {
+    margin: 10px;
+}
 
+.question2 {
+    margin: 10px;
+}
+
+.question3 {
+    margin: 10px;
+}
+
+.question4 {
+    margin: 10px;
+}
+
+.question5 {
+    margin: 10px;
+}
+.question6 {
+    margin: 10px;
+}
+.question7 {
+    margin: 10px;
+}
+.question8 {
+    margin: 10px;
+}
+.question9 {
+    margin: 10px;
+}
+.question10 {
+    margin: 10px;
+}
